reverse_proxy/01.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
  labels:
    name: proxy
