reverse_proxy/05.casaos-endPoint.yaml
apiVersion: v1
kind: Service
metadata: 
  name: casaos-external-ip-service
  namespace: proxy
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---

apiVersion: v1
kind: Endpoints
metadata:
  name: casaos-external-ip-service
  namespace: proxy
subsets:
  - addresses:
      - ip:  192.168.8.221
    ports: 
      - port: 80
        protocol: TCP
