reverse_proxy/06.proxmox-endPoint.yaml
apiVersion: v1
kind: Service
metadata: 
  name: proxmox-external-ip-service
  namespace: proxy
spec:
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external-ip-service
  namespace: proxy
subsets:
  - addresses:
      - ip:  192.168.8.220
    ports:
      - port: 8006
        protocol: TCP
