reverse_proxy/07.net.Gli-endPoint.yaml
apiVersion: v1
kind: Service
metadata: 
  name: net-external-ip-service
  namespace: reverse_proxy
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
