reverse_proxy/04.traefik_ingressRoute.yaml
# traefik-ingressroute-simple.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: caddy-local-routes
#   namespace: proxy
# spec:
#   entryPoints:
#     - web
#     - websecure
#   routes:
#   - match: Host(`casaos.local`) || Host(`net.local`) || Host(`proxmox.local`)
#     kind: Rule
#     services:
#     - name: caddy-internal
#       port: 80

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxy-ingressroute
  namespace: streaming
spec:
  entryPoints:
    - web
    - websecure
  
  routes:
    # Jellyseerr
    - match: Host(`jellyseerr.local`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 80
          namespace: streaming
    # Proxmox
    #    - match: Host(`proxmox.local`)
    #  kind: Rule
    #  services:
    #    - name: proxmox-external-ip-service
    #      port: 8006
    #        #scheme: https
    #        #serversTransport: insecure-skip-verify
    #      namespace: proxy
    # Net
    #- match: Host(`net.local`)
    #  kind: Rule
    #  services:
    #    - name: net-external-ip-service
    #      port: 8080
    #      namespace: proxy

            #tls:
            #secretName: local-tls
